src/assets/scss/_helpers.scss
.space-between {
	display: flex;
	justify-content: space-between;
}

.flex-end {
	justify-content: flex-end;
}

.optional-text {
	font-size: 1rem;
}

.has-border-bottom {
	border-bottom: 1px solid #f5f8fa;
}

.loading-ref {
	position: relative;
}

.overflow-visible {
	overflow: visible;
}

.radio-pictogram {
	max-width: 40px;
}

.table-link {
	color: #0D92B3;
	font-weight: bold;

	&:hover {
		color: #0D92B3;
		text-decoration: underline;
	}
}

@media only screen and (min-width: $desktop) {
	.hide-desktop {
		display: none !important;
	}
}

@media only screen and (min-width: $tablet) and (max-width: $desktop) {
	.hide-tablet {
		display: none !important;
	}
}

@media only screen and (max-width: $tablet) {
	.hide-mobile {
		display: none !important;
	}
}

